# cronitor

./: .gitignore  README.md  cronitor.json.example  cronitor.sh  cronvisio.json.example  cronvisio.sh  pyproject.toml  pytest.ini  requirements.txt
docs/: .$cronitor.drawio.bkp  cronitor.drawio
scripts/: cronitor-client.py
src/cronitor/: __init__.py  borgbackup.py  postfix.py
src/cronitor/monitor/: __init__.py  amazon_kindle_quotes.py  automysqlbackup.py  borgbackup.py  postfix.py  smtp.py  tlsreport.py  wireguard.py
src/cronitor/notifier/: __init__.py  matrix.py  stdout.py
src/cronvisio/: __init__.py  cli.py
src/cronvisio/monitor/: __init__.py  amazon_kindle_quotes.py  automysqlbackup.py  borgbackup.py  postfix.py  smtp.py  tlsreport.py  wireguard.py
src/cronvisio/notifier/: __init__.py  matrix.py  stdout.py
tests/: .coverage  test_amazon_kindle_quotes.py  test_automysqlbackup.py  test_borgbackup.py  test_smtp_monitor.py  test_wireguard.py
tests/data/: .borgbackup.json.gz.swp
tests/data/wireguard/: client1.conf  client2.conf  server.conf  wg-show-output1.txt  wg-show-output2.txt
