[project]
name = "cronvisio"
version = "0.9.0"
description = "cronvisio - Monitor and control services through cron and notifiers."
authors = [
  { name = "Albert Weichselbraun", email = "albert@weichselbraun.net" }
]
license = { text = "GPL-3.0" }
readme = "README.md"
requires-python = ">=3.8,<3.14"

dependencies = [
  "matrix-nio>=0.24.0,<1.0.0"
]

[project.urls]
homepage = "http://github.com/AlbertWeichselbraun/cronvisio"
repository = "http://github.com/AlbertWeichselbraun/cronvisio"

[project.scripts]
cronvisio = "cronvisio.cli:cli"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py312"  # adjust as needed
extend-exclude = ["*.json", "*.conf"]
src = ["src", "tests"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-builtins
    "A",
    # flake8-bugbear
    "B",
    # flake8-comprehensions
    "C4",
    # flake8-errmsg
    "EM",
    # flake8-quotes
    "Q",
    # flake8-pyi
    "PYI",
    # isort
    "I",
    "RSE", "RET", "SLOT", "TID", "TC", "C90", "N", "PERF", "E", "W",
    "UP", "FURB", "RUF", "TRY", "YTT"
]

[tool.ty.src]
root="./src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=cronvisio --cov-report=term-missing"
